assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Cherry+Swash:wght@700&family=Fira+Mono&display=swap');

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
margin: 0;
padding: 0;
/* border: 0; */
font-size: 62.5%;
font: inherit;
vertical-align: baseline;
max-width:100%;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
display: block;
}
body {
line-height: 1.5;
font-size: 1.6rem;
color: #444444;
min-height:100%;
}
* {
max-width:100%;
box-sizing:border-box;
}
ol, ul {
list-style: none;
}
blockquote, q {
quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
content: '';
content: none;
}
table {
border-collapse: collapse;
border-spacing: 0;
}

/*  my additions   */
.main-container{
    position: relative;
    min-height: 100vh;
    max-width: 100%;
}
.top-nav{
    display: flex;
    justify-content: space-around;
    padding: 1%;
    font-size: 1rem;
    background: rgb(232, 232, 228);
}
a {
    text-decoration: none;
    color: rgb(24, 184, 202);
}
.plug a{
    padding-left: 1%;
}
.title-mission, .top-rated-articles, .new-rated-articles, .plug, .content-container{
    padding: 0 10%;
}
.title-mission{
    height: auto;
    background: url("/assets/images/hammer-nails.jpeg");
    background-repeat: no-repeat;
    background-position: right top;
    background-size: 40%;
}
.title-mission h3{
    padding: 2% 0;
}
.title-mission p{
    width: 40%;
    text-align: center;
    padding: 2% 0 9% 0;
    text-shadow: .3px .3px 6px;
}
.top-pic{
    width: 50%;
}
.top-pic img{
    width: 100%;
    height: auto;
    border-radius: 10px;
}
.divider{
    height: 1px;
    padding: 1.5%;
    background: rgb(195, 214, 221);
}
.content-container{
    text-align: center;
    background: rgb(195, 214, 221);
}
.content-container h2{
    margin: auto;
    padding: 5px 0;
    background: rgb(232, 232, 228);
}
.top-rated-articles, .new-rated-articles{
    display: flex;
    padding: 4% 0;
    justify-content: space-around;
}
.top-rated, .new-rated {
    width: 300px;
    border: 3px solid black;
    box-shadow: 2px 2px 4px;
    display: flex;
}
.top-rated img{
    width: 100%;
}
.plug{
    padding: 2.5% 10% 2.5% 10%;
    display: flex;
}
.plug h4{
    color: rgb(194, 44, 44);
}
footer{
    padding: 1%;
    display:flex;
    justify-content: center;
    background: rgb(232, 232, 228);
}
#footer-index{
    position: relative;
    width: 100%;
    height: 65px;
    margin-top: 8px;
}
#footer-copy{
    font-size: 1rem;
    padding: 8px 22px 8px 0;
}
footer a{
    font-size: 1rem;
    display: block;
    border: 2px solid #444444;
    border-radius: 50%;
    box-shadow: 1px 1px 2px #444444;
    text-shadow: 2px 2px 2px white;
    padding: 6px;
}

/*   about page  */
.about-main-container{
    max-width: 100%;
    min-height: 100vh;
    background: url("/assets/images/bg-whitelines.jpeg");  
}
.about-intro-container{
    text-align: center;
    padding: 10%;
}
.about-intro-container h2{
    padding-bottom: 5%;
}
.about-intro-container p, .about-intro-container h2{
    text-shadow: 8px 8px 7px rgb(189, 187, 187);
}
.about-content-container{
    text-align: center;
    padding: 2% 10%;
    background: rgb(195, 214, 221);
}
.cell{
    width: 33%;
    height: 450px;
    display: inline-block;
    margin: 0 15px;
    border: 3px solid #444444;
    border-radius: 8px;
    box-shadow: 1px 1px 2px;
    overflow: hidden;
    background: rgb(179, 216, 220);
}
.cell img{
    width: 100%;
    height: auto;
    object-fit: cover;
}
#about-plug{
    padding-top: 10%;
}
#footer-about{
    position: relative;
    width: 100%;
    height: 65px;
    margin-top: 10vh;
}
#phone-number{
    padding-top: 10%;
    font-size: 7rem;
}

/*  typography */
h1 {
    font-size: 5rem;
    font-family: 'Cherry Swash', cursive;
}
h2{
    font-size: 2.2rem;
    font-family: 'Fira Mono', monospace;
}
h3{
    font-size: 2rem;
    font-family: 'Fira Mono', monospace;
}
p{    
    font-family: 'Fira Mono', monospace;
}

/* hover  */
a:hover {
    color: #444444;
    text-shadow: .5px 1px 3px rgb(24, 184, 202);
}

/*   main page responsive  */
@media (max-width:900px){
    .title-mission h1, .title-mission h3, .top-pic{
        padding-right: 16%;
    }
    .top-pic img{
        border-radius: 0;
    }
}
@media (max-width:823px){
    .title-mission h1, .title-mission h3, .top-pic{
        padding-right: 22%;
    }
    .top-pic{
        width: 65%;
    }
}
@media (max-width:882px){
    .title-mission p{
        width: 100%;
    }
}
@media (max-width:712px){  
    .title-mission h1, .title-mission h3, .top-pic{
        padding-right: 27%;
    }
    h1{
        font-size:3.5rem;
    }
    h2{
        font-size:2rem;
    }
    h3{
        font-size:1.8rem;
    }
   .plug{
       font-size:1.2rem;
   }
}
@media (max-width:550px){
    .top-nav a{
        font-size:.8rem;
    }
}
@media (max-width:500px){
    .top-nav{
        flex-direction: column;
        align-items: center;
    }
    .top-nav a{
        font-size:1.4rem;
    }
    .top-pic{
        width: 75%;
    }
    .plug{
        font-size:1rem;
    }  
    .title-mission h1, .title-mission h3, .top-pic{
        padding-right: 0;
        text-align: center;
    }
    .title-mission {
        display:flex;
        flex-direction: column;
        align-items: center;
        background: none;
    }
    .top-rated-articles, .new-rated-articles{
        flex-direction: column;
        align-items: center;
    }
    .top-rated, .new-rated{
        margin: 2% 0;
    }  
}

/*  about page responsive */
@media (max-width:600px){
    .cell{
        width:100%;
    }
}
@media (max-width:800px){
    .cell{
        width:50%;
    }
}
@media (max-width:1000px){
    .cell{
        height:250px;
    }
}
@media (max-width:1200px){
    .cell{
        height:400px;
    }
}
@media (min-width:1400px){
    .cell{
        height:500px;
    }
}
@media (min-width:1575px){
    .cell{
        height:550px;
    }
}
@media (min-width:1700px){
    .cell{
        height:600px;
    }
}
@media (min-width:1800px){
    .cell{
        height:700px;
    }
}
@media (min-width:1900px){
    .cell{
        height:800px;
    }
}

